(chore) Fixed site responsiveness issues (#38)
* changed px to rem

* fixed overlapping issue, hamburger color and added hamburger animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,7 +159,7 @@
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(1.25rem);
   }
   to {
     opacity: 1;
